# glpkAPI

./: DESCRIPTION  INSTALL  MD5  NAMESPACE  NEWS  README  configure  configure.ac  configure.win
R/: AllGenerics.R  generics.R  glpk.R  glpkAPI.R  glpk_ptrClass.R  zzz.R
inst/: INSTALL  NEWS.Rd  c2r.map
inst/doc/: glpkAPI.Rnw
man/: addColsGLPK.Rd  addRowsGLPK.Rd  advBasisGLPK.Rd  bfExistsGLPK.Rd  bfUpdatedGLPK.Rd  copyProbGLPK.Rd  cpxBasisGLPK.Rd  createIndexGLPK.Rd  delColsGLPK.Rd  delProbGLPK.Rd  delRowsGLPK.Rd  deleteIndexGLPK.Rd  eraseProbGLPK.Rd  factorizeGLPK.Rd  findColGLPK.Rd  findRowGLPK.Rd  getBfcpGLPK.Rd  getBheadGLPK.Rd  getCbindGLPK.Rd  getColDualGLPK.Rd  getColDualIptGLPK.Rd  getColKindGLPK.Rd  getColLowBndGLPK.Rd  getColNameGLPK.Rd  getColPrimGLPK.Rd  getColPrimIptGLPK.Rd  getColStatGLPK.Rd  getColTypeGLPK.Rd  getColUppBndGLPK.Rd  getColsDualGLPK.Rd  getColsDualIptGLPK.Rd  getColsKindGLPK.Rd  getColsLowBndsGLPK.Rd  getColsPrimGLPK.Rd  getColsPrimIptGLPK.Rd  getColsStatGLPK.Rd  getColsUppBndsGLPK.Rd  getDualStatGLPK.Rd  getInteriorParmGLPK.Rd  getMIPParmGLPK.Rd  (+113 more)
src/: Makevars  Makevars.in  Makevars.win  config.h  config.h.in  glpkAPI.c  glpkAPI.h  glpkCallback.c  glpkCallback.h  glpkR.h  init.c
vignettes/: glpkAPI.Rnw
